fix(footnote): Fix footnote overflow on small screens.

--- a/assets/css/katex.fix.css
+++ b/assets/css/katex.fix.css
@@ -12,10 +12,6 @@ th .katex {
     overflow-x: auto;
     overflow-y: hidden;
 }
-/* Also fix word breaks for code elements here */
-.post-full-content p code {
-    word-break: normal;
-}
 
 .post-full-content table th .katex {
     text-transform: none;
